# cmake_start

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  fix_and_format.sh  flake.nix  run_test.sh
.github/workflows/: ci.yaml
bench/: CMakeLists.txt  bench.cpp
cmake/: CompilerTooling.cmake
include/: Logger.hpp
playground/: CMakeLists.txt  main.cpp
scripts/: fix_and_format.sh  run_test.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  TestTypes.hpp  example_test.cpp
